# vessel-frame

./: .gitignore  config.example.toml  readme.md  ruff.toml
.github/workflows/: ci.yml
core/: pyproject.toml
core/src/vf_core/: ais_utils.py  asset_manager.py  config_manager.py  error_screen.py  main.py  marine_utils.py  message_bus.py  network_manager.py  plugin_manager.py  plugin_types.py  render_strategies.py  screen_manager.py  text_utils.py  vessel_manager.py  vessel_repository.py
core/src/vf_core/web_admin/: auth.py  dependencies.py  main.py
core/src/vf_core/web_admin/api/: auth.py  config.py  network.py  plugins.py  system.py
core/src/vf_core/web_admin/frontend/: index.html  package-lock.json  package.json  vite.config.js
core/src/vf_core/web_admin/frontend/src/: App.jsx  api.js  context.js  main.jsx  theme.css
core/src/vf_core/web_admin/frontend/src/components/: BoundsEditor.jsx  ConfigForm.jsx  PluginCard.jsx  ZoneEditor.jsx
core/src/vf_core/web_admin/frontend/src/pages/: AuthPage.jsx  NetworkPage.jsx  PluginsPage.jsx
core/src/vf_core/web_admin/static/: app.js  auth.html  index.html  network.html  style.css
docs/: create-plugin.md  hardware.md  installation.md  plugin-list.md
plugins/controllers/button_controller/: pyproject.toml
plugins/controllers/button_controller/src/button_controller/: __init__.py
plugins/message_processors/ais_decoder_processor/: pyproject.toml
plugins/message_processors/ais_decoder_processor/src/ais_decoder_processor/: __init__.py
plugins/message_sources/com_message_source/: pyproject.toml
plugins/message_sources/com_message_source/src/com_message_source/: __init__.py
plugins/message_sources/daisy_message_source/: pyproject.toml
plugins/message_sources/daisy_message_source/src/daisy_message_source/: __init__.py
plugins/message_sources/i2c_message_source/: pyproject.toml
plugins/message_sources/i2c_message_source/src/i2c_message_source/: __init__.py
plugins/message_sources/mock_message_source/: pyproject.toml
plugins/message_sources/mock_message_source/src/mock_message_source/: __init__.py
plugins/message_sources/udp_message_source/: pyproject.toml
plugins/message_sources/udp_message_source/src/udp_message_source/: __init__.py
plugins/renderers/image_renderer/: pyproject.toml
plugins/renderers/image_renderer/src/image_renderer/: __init__.py
plugins/renderers/inky_renderer/: pyproject.toml
plugins/renderers/inky_renderer/src/inky_renderer/: __init__.py
plugins/screens/map_screen/: pyproject.toml  readme.md
plugins/screens/map_screen/src/map_screen/: __init__.py  bounds.py  layout.py  tiles.py
plugins/screens/table_screen/: pyproject.toml
plugins/screens/table_screen/src/table_screen/: __init__.py  common.py  landscape.py  large.py
plugins/screens/table_screen/src/table_screen/layouts/: __init__.py  base.py  landscape_base.py  landscape_large.py  landscape_standard.py  portrait_large.py  portrait_standard.py
plugins/screens/zone_screen/: pyproject.toml
plugins/screens/zone_screen/src/zone_screen/: __init__.py  landscape.py  large.py
plugins/screens/zone_screen/src/zone_screen/layouts/: __init__.py  base.py  landscape_base.py  landscape_compact.py  landscape_large.py  landscape_standard.py  portrait_large.py  portrait_standard.py
scripts/: network_mode_service.py  render_map.py  render_table.py  render_zone.py  resolutions.txt  resolutions_cat.txt  setup.sh
tests/: test_ais_decoder.py  test_config_manager.py  test_message_bus.py  test_render_strategies.py
