[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "vessel-frame-core"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "tomli-w>=1.2.0",
    "aiosqlite>=0.21.0",
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "argon2-cffi>=25.1.0",
    "PyJWT>=2.10.1",
    "pillow>=12.0.0"
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.17",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[project.scripts]
vf = "vf_core.main:main"

[tool.setuptools.package-data]
vf_core = ["assets/**/*", "web_admin/static/**/*"]

[tool.setuptools.packages.find]
where = ["src"]
