[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "vessel-frame-core"
version = "0.1.0"
description = "Core services and plugin framework for Vessel Frame, an extensible AIS ship-tracking display for Raspberry Pi."
requires-python = ">=3.11"
license = "GPL-3.0-only"
authors = [{ name = "Spook Workshop" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "tomli-w>=1.2.0",
    "aiosqlite>=0.21.0",
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "argon2-cffi>=25.1.0",
    "PyJWT>=2.10.1",
    "pillow>=12.0.0"
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.17",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/SpookWorkshop/vessel-frame"
Repository = "https://github.com/SpookWorkshop/vessel-frame"

[project.scripts]
vf = "vf_core.main:main"

[tool.setuptools.package-data]
vf_core = ["assets/**/*", "web_admin/static/**/*"]

[tool.setuptools.packages.find]
where = ["src"]
