[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "button-controller"
version = "0.1.0"
description = "GPIO button controller plugin for Vessel Frame."
license = "GPL-3.0-only"
authors = [{ name = "Spook Workshop" }]
requires-python = ">=3.11"
dependencies = ["vessel-frame-core", "gpiozero>=2.0", "lgpio>=0.2"]

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."vesselframe.plugins.controllers"]
button_controller = "button_controller:make_plugin"

[project.urls]
Homepage = "https://github.com/SpookWorkshop/vessel-frame"
Repository = "https://github.com/SpookWorkshop/vessel-frame"
