[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ais-decoder-processor"
version = "0.1.0"
description = "AIS (NMEA) message decoder plugin for Vessel Frame."
license = "GPL-3.0-only"
authors = [{ name = "Spook Workshop" }]
requires-python = ">=3.11"
dependencies = ["vessel-frame-core", "pyais>=2.13.2"]

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."vesselframe.plugins.messageprocessors"]
ais_decoder_processor = "ais_decoder_processor:make_plugin"

[project.urls]
Homepage = "https://github.com/SpookWorkshop/vessel-frame"
Repository = "https://github.com/SpookWorkshop/vessel-frame"
