[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mock-message-source"
version = "0.0.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."vesselframe.plugins.messagesource"]
mock_message_source = "mock_message_source:make_plugin"
