[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "udp-message-source"
version = "0.1.0"
description = "UDP AIS message source plugin for Vessel Frame. Receives NMEA sentences over UDP (eg from AIS-catcher) and republishes them on ais.raw"
requires-python = ">=3.11"
license = "GPL-3.0-only"
authors = [{ name = "Spook Workshop" }]
dependencies = ["vessel-frame-core"]

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."vesselframe.plugins.messagesource"]
udp_message_source = "udp_message_source:make_plugin"

[project.entry-points."vesselframe.config.schemas"]
udp_message_source = "udp_message_source:get_config_schema"

[project.urls]
Homepage = "https://github.com/SpookWorkshop/vessel-frame"
Repository = "https://github.com/SpookWorkshop/vessel-frame"
