[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "inky-renderer"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = ["pillow>=12.0.0","inky>=2.2.1"]

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."vesselframe.plugins.renderer"]
inky_renderer = "inky_renderer:make_plugin"

[project.entry-points."vesselframe.config.schemas"]
inky_renderer = "inky_renderer:get_config_schema"