[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "inky-renderer"
version = "0.1.0"
description = "Pimoroni Inky e-ink renderer plugin for Vessel Frame."
license = "GPL-3.0-only"
authors = [{ name = "Spook Workshop" }]
requires-python = ">=3.11"
dependencies = ["vessel-frame-core", "pillow>=12.0.0", "inky>=2.2.1"]

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."vesselframe.plugins.renderer"]
inky_renderer = "inky_renderer:make_plugin"

[project.entry-points."vesselframe.config.schemas"]
inky_renderer = "inky_renderer:get_config_schema"

[project.urls]
Homepage = "https://github.com/SpookWorkshop/vessel-frame"
Repository = "https://github.com/SpookWorkshop/vessel-frame"
