[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "table-screen"
version = "0.1.0"
description = "Vessel table screen layout plugin for Vessel Frame."
license = "GPL-3.0-only"
authors = [{ name = "Spook Workshop" }]
requires-python = ">=3.11"
dependencies = ["vessel-frame-core", "pillow>=12.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."vesselframe.plugins.screens"]
table_screen = "table_screen:make_plugin"

[project.entry-points."vesselframe.config.schemas"]
table_screen = "table_screen:get_config_schema"

[project.urls]
Homepage = "https://github.com/SpookWorkshop/vessel-frame"
Repository = "https://github.com/SpookWorkshop/vessel-frame"
