[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "zone-screen"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = ["pillow>=12.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."vesselframe.plugins.screens"]
zone_screen = "zone_screen:make_plugin"

[project.entry-points."vesselframe.config.schemas"]
zone_screen = "zone_screen:get_config_schema"